Fixed logo width and bleed

--- a/css/heroic-features.css
+++ b/css/heroic-features.css
@@ -67,6 +67,10 @@ footer {
     text-align: right;
 }
 
+.main-header img {
+    max-width: 100%;
+}
+
 #right-side {
     float: left;
 }
